# rs_202403_caching

./: Cargo.toml  README.md
migrations/: 2024033109195002_create_contacts.sql
src/: contacts.rs  handler.rs  main.rs  state.rs
src/handler/contact/: create.rs  delete.rs  list.rs  read.rs  update.rs
