[package]
name = "rs_202403_caching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15.0"
fred = { version = "8.0.5", features = ["serde-json", "enable-rustls", "rustls"] }
names = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-error = "0.3.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "tls-rustls"] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
